@startuml
class Clima {
    - temperatura : double
    - humedad : double
    - ciudad : Ciudad
}

class Validador {
    - List<ICondicionAlerta> condiciones
    + cumpleCondiciones(Clima clima) : boolean
}

interface ICondicionAlerta {
    -cumpleCondicion(Clima clima) : Boolean
}

class CondicionHumedad{
    - humedadMaxima : double
    + cumpleCondicion(Clima clima) : boolean
}

class CondicionTemperatura {
    - temperaturaMaxima : double}
    + cumpleCondicion(Clima clima) : boolean
}

class Ciudad {
    - nombre : String

}

interface IAdapterAPI{
    + obtenerClima(ciudad: Ciudad) : Clima
}

class WebClientClima implements IAdapterAPI {
    - apiKey : String
    - url : String

    + obtenerClima(ciudad: Ciudad) : Clima
    }

class Email{
    - remitente : String
    - destinatarios : List<Destinatario>
    - asunto : String
    - mensaje : String
    - alerta : Alerta
}

class Destinatario{
    - correo : String
    - nombre : String
}

class Alerta{
    - fechaCreacion : LocalDate
    - clima : Clima
}

IAdapterAPI ..> Ciudad
Clima --> Ciudad
Validador ..> Clima
Validador --> ICondicionAlerta
CondicionTemperatura ..|> ICondicionAlerta
CondicionHumedad     ..|> ICondicionAlerta
Alerta --> Clima
Alerta *-- Email
Email --> Destinatario
@enduml